microservice helper files update

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,13 +6,9 @@ pipeline {
     environment {
         commit = sh(returnStdout: true, script: "git rev-parse --short=8 HEAD").trim()
 
-        docker_user = "seanhorner"
+        org_ecr_uri = '${ORG_ACCOUNT_NUM}.dkr.ecr.${region}.amazonaws.com'
 
-        aws_region = "${region}"
-        aws_ecr_account = '${ORG_ACCOUNT_NUM}'
-        org_ecr_uri = '${aws_ecr_account}.dkr.ecr.${aws_region}.amazonaws.com'
-
-        repo_name = 'utopia_backend_flights_fastapi'
+        repo_name = 'utopia_backend_flights_fastapi-SH'
         scanner_home = tool "${SonarQubeScanner}";
     }
 
@@ -25,6 +21,23 @@ pipeline {
             }
         }
 
+        stage('SonarQube Analysis') {
+            steps{
+                echo 'Beginning SonarQube analysis...'
+                withSonarQubeEnv(installationName: 'SonarQube') {
+                    sh "${scanner_home}/bin/sonar-scanner"
+                }
+            }
+        }
+
+        stage('Testing') {
+            agent {dockerfile true}
+            steps {
+                echo 'Running Python unittests...'
+                sh 'pytest api_microservice/test_runner.py'
+            }
+        }
+
         stage('Build') {
             steps {
                 echo 'Building Docker image...'
@@ -32,14 +45,12 @@ pipeline {
             }
         }
 
-        stage('Push Images') {
+        stage('Push') {
             steps {
-                echo 'Tagging images'
-                sh 'docker tag ${repo_name}:latest ${docker_user}/${repo_name}:latest'
+                echo 'Tagging images...'
                 sh 'docker tag ${repo_name}:latest ${org_ecr_uri}/${repo_name}:latest'
                 sh 'docker tag ${repo_name}:latest ${org_ecr_uri}/${repo_name}:${commit}'
-                echo 'Pushing images'
-                sh 'docker push ${docker_user}/${repo_name}:latest'
+                echo 'Pushing images...'
                 sh 'docker push ${org_ecr_uri}/${repo_name}:latest'
                 sh 'docker push ${org_ecr_uri}/${repo_name}:${commit}'
             }
@@ -49,7 +60,6 @@ pipeline {
             steps {
                 echo 'Removing images'
                 sh 'docker images rm -f ${repo_name}:latest'
-                sh 'docker images rm -f ${docker_user}/${repo_name}:latest'
                 sh 'docker images rm -f ${org_ecr_uri}/${repo_name}:latest'
                 sh 'docker images rm -f ${org_ecr_uri}/${repo_name}:${commit}'
             }
